--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ body {
 
 header {
     text-align: center;
-    background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     box-shadow: 0px 0px 50px -8px #000000;
 }
@@ -126,7 +125,6 @@ h3 {
     font-size: 2.2rem;
     font-family: 'Oxanium', cursive;
     color: white;
-    background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     border: transparent;
     border-radius: 10px;
@@ -136,7 +134,7 @@ h3 {
 }
 
 #cardPro {
-    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     color: white;
 }
 
