--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background: url('../public/assets/bg.png') no-repeat fixed;
+    background: url('../src/assets/bg.png') no-repeat fixed;
     background-size: 100% 100%;
 }
 
@@ -26,6 +26,20 @@ header {
     text-align: center;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     box-shadow: 0px 0px 50px -8px #000000;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#siteLogo {
+    width: 5%;
+    margin-right: 3%;
+}
+
+#logoTitle {
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
 }
 
 h1 {
@@ -45,7 +59,6 @@ nav a {
     font-family: 'Oxanium', cursive;
     color: white;
     text-decoration: none;
-    margin-bottom: 1%;
     border: 1px solid transparent;
     border-radius: 5px;
     padding: 8px;
