--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,90 @@ h3 {
     color: #0093E9;
 }
 
+#sectionAbout {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#aboutTxt {
+    font-size: 2rem;
+    font-family: 'Oxanium', cursive;
+    color: #333;
+    text-align: center;
+    margin: 5% auto;
+}
+
+#packageTxt {
+    color: #0093E9;
+    text-decoration: none;
+}
+
+#packageTxt:hover {
+    font-weight: 700;
+    text-decoration: none;
+}
+
+#teamPhoto {
+    width: 51%;
+    margin: 0 auto;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    margin: 2% auto;
+    padding: 2%;
+    border-radius: 20px;
+    box-shadow: 0px 0px 50px -8px #000000;
+}
+
+form input {
+    width: 98%;
+    padding: 1%;
+    margin: 1%;
+    border: 1px solid #333;
+    border-radius: 5px;
+}
+
+textarea {
+    width: 98%;
+    padding: 1%;
+    margin: 1%;
+    border: 1px solid #333;
+    border-radius: 5px;
+    resize: none;
+}
+
+form button {
+    font-size: 2rem;
+    font-family: 'Oxanium', cursive;
+    color: white;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    border: transparent;
+    border-radius: 10px;
+    padding: 6px;
+    width: 20%;
+    margin: 2% auto auto auto;
+}
+
+.formTxt {
+    font-size: 2rem;
+    font-family: 'Oxanium', cursive;
+    color: #333;
+    margin: 1%;
+}
+
+.fa-solid {
+    font-size: 2rem;
+    color: #0093E9;
+    margin-right: 2%;
+}
+
 footer {
     text-align: center;
     color: #333;
