--- a/src/App.css
+++ b/src/App.css
@@ -98,11 +98,13 @@ h2 {
     background-color: whitesmoke;
     box-shadow: 0px 0px 30px -8px #000000;
     border-radius: 20px;
+    transition: transform 0.5s ease;
 }
 
 .cards:hover {
-    transition: all .2s ease-in-out;
+    /* transition: all .2s ease-in-out; */
     transform: scale(1.05);
+    transition: transform 0.5s ease;
 }
 
 h3 {
